Fixed background color swapping on mobile

--- a/assets/styles/layout/page/_screen.scss
+++ b/assets/styles/layout/page/_screen.scss
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+    background: $background;
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
